--- a/appspec.yml
+++ b/appspec.yml
@@ -3,9 +3,9 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ringcard
+    destination: /opt/testapp
 permissions:
-  - object: /home/ringcard/
+  - object: /opt/testapp/
     owner: ubuntu
     group: ubuntu
     mode: 755
