--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
       
 name: Deploy String boot to Amazon EC2
 env:
-  PROJECT_NAME: RingCa_deploy_2
+  PROJECT_NAME: action_codedeploy
   COOKIE_NAME: ${{ secrets.COOKIE_NAME }}
   SECRET: ${{ secrets.SECRET }}
   EXPIRATION_TIME: ${{ secrets.EXPIRATION_TIME }}
@@ -66,8 +66,7 @@ jobs:
           COOKIE_NAME: ${{ secrets.COOKIE_NAME }}
 
       - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://ringcabucket/$PROJECT_NAME/$GITHUB_SHA.zip
-
+        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://ringca-deploy-mirror/$PROJECT_NAME/$GITHUB_SHA.zip
 
       - name: Code Deploy
-        run: aws deploy create-deployment --application-name ringca --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name dev --s3-location bucket=ringcabucket,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
+        run: aws deploy create-deployment --application-name testapp --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name dev --s3-location bucket= ringca-deploy-mirror,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
